added code to devdocs for editing NCIT defs, updated .Rbuildignore

--- a/vignettes/AnnotatedBCGEData.Rmd
+++ b/vignettes/AnnotatedBCGEData.Rmd
@@ -17,7 +17,7 @@ vignette: >
 ---
 
 
-```{r, echo=FALSE, include=FALSE}
+```{r, setup echo=FALSE, include=FALSE}
 pkg <- read.dcf("../DESCRIPTION", fields = "Package")[1]
 library(pkg, character.only = TRUE)
 ```
