--- a/README.Rmd
+++ b/README.Rmd
@@ -53,24 +53,41 @@ The data used in this package was accessed through [Zenodo](https://zenodo.org/c
  - GSE10797: https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE10797 
  - GSE59772: https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE59772 
 
-The package itself includes a metadata file as required by Bioconductor. This file is a table that lists the name of each object and more information about where it came from and how it was accessed. See inst/extdata/metadata.csv. When the package is available in ExperimentHub, using the query() function will show available data sets. 
+The package itself includes a metadata file as required by Bioconductor. This file is a table that lists the name of each object and more information about where it came from and how it was accessed. See inst/extdata/metadata.csv. 
 
-```{r load_metadata}
-#library(ExperimentHub)
-#eh = ExperimentHub()
-#query(eh, AnnotatedBCGEData)
-
-# this code throws errors because the package is not currently available in ExperimentHub
-
+# Filtering Data by Ontology
+``` {r load_tidyverse, include = FALSE}
+library(tidyverse)
+library(SummarizedExperiment)
 ```
 
-
-## Examples
-
-The following is the code required to access the objects within the package. Other packages were used in the creation of the package, but they should be automatically loaded when the package is installed. These packages are included in the NAMESPACE file. 
+The following code is required to access the tools and data included in AnnotatedBCGEData:
 ```{r load_packages, message=FALSE, warning=FALSE}
 library(AnnotatedBCGEData)
 ```
+This package contains several functions that are designed to help users filter the included data sets based on their associated ontology terms. The first function is `searchDefs`. This function takes two parameters: the term to search by and the type of term it is. The options for terms are Name, URI, Code, and Definition. If no term type is specified, the function defaults to Name. 
+
+## Example: Searching for a data set by ontology term name
+In this first example of using the `searchDefs` function, we search for a particular ontology term, "Progesterone Receptor Status". 
+
+```{r PR_example}
+searchDefs("Progesterone Receptor Status")
+
+```
+
+The output of calling this function is a tibble containing the URI, the name of the term, synonyms, the definition, and the NCIT code associated with it. When the correct term is identified, the user can then pass the URI to the `searchForDatasets` function, which identifies data sets that contain the chosen ontology term.
+
+## Example: Searching for a data set by ontology term definition
+In this example, we search for the ontology term by an associated definition. Because the definitions are more vague, this may identify several similar terms. It is important that the user is able to identify the exact term they are looking for.
+
+```{r PR_example2}
+searchDefs("Progesterone receptor", "Definition")
+
+```
+
+Again, when the chosen term is identified, it can be passed to the `searchForDatasets` function. 
+
+# Examples
 
 Downloading this package does not download the data sets onto the user's machine. To load the SummarizedExperiment object for a data set included in AnnotatedBCGEData, the user chooses the name of the data set and passes it as a string to the function makeObject. This function downloads the data and creates the SummarizedExperiment object that is accessible to the user. To see a comprehensive list of all data sets included and where they came from, see the metadata.csv file in inst/extdata/metadata.csv. This will be accessible in the code when the package is available in ExperimentHub. <br>
 <br>
@@ -87,6 +104,7 @@ sample_metadata = colData(GSE41197_SE)
 feature_data = rowData(GSE41197_SE)
 ```
 
+## Plot Example 1: Bar plot
 In the following example, we first access the matrix of gene expression values. To make it easier to analyze, we convert it into a tibble and select the first 10 rows. We then used ggplot() to create a bar plot showing the gene expression levels for one sample across 10 genes.
 
 ```{r plot_example, message=FALSE, warning=FALSE}
@@ -105,7 +123,7 @@ exp_tib = as_tibble(gene_expression_values, rownames='Ensembl_Gene_ID')[1:10,] %
 exp_tib
 ```
 
-
+## Example 2: Boxplot with expression values
 Here, we first accessed the matrices for 3 data sets included in AnnotatedBCGEData. 
 
 ```{r plot_example_2, message=FALSE, warning=FALSE}
@@ -151,6 +169,7 @@ ggplot(combined_samples, aes(x = group, y = Expression_Level, fill = group)) +
     theme_bw()
 ```
 
+## Example 3: Heat map
 In this example, we combine using both the metadata and the expression data to create a heat map of gene expression levels.<br>
 First, we load the data sets, turn them into tibbles, and extract both the metadata and expression data. We then filter the expression to only include the samples that are identified as stroma cells. Finally, we create two vectors with all the gene names in each tibble to set them up for comparison. 
 
@@ -225,6 +244,7 @@ top_variance_map
 
 ```
 
+## Example 4: Combining feature data and expression data
 In this final example, we use aspects of the feature data along with the expression data. <br> <br>
 
 First, we get the feature data and convert it to a tibble. We then filter this data for each data set to only include genes on chromosome 16. Similar to the last example, we also make a vector with the gene names the data sets have in common. 
@@ -290,7 +310,7 @@ combined_data = bind_rows(GSE10797_chr16_common, GSE59772_chr16_common) %>%
 combined_data
 ```
 
-## Citation
+# Citation
 
 Below is the citation output from using `citation('AnnotatedBCGEData')` in R. Please
 run this yourself to check for any updates on how to cite __AnnotatedBCGEData__.
@@ -301,7 +321,7 @@ print(citation('AnnotatedBCGEData'), bibtex = TRUE)
 
 Please note that the `AnnotatedBCGEData` was only made possible thanks to many other R and bioinformatics software authors, which are cited either in the vignettes and/or the paper(s) describing this package.
 
-## Development tools
+# Development tools
 
 * Continuous code testing is possible thanks to [GitHub actions](https://www.tidyverse.org/blog/2020/04/usethis-1-6-0/)  through `r BiocStyle::CRANpkg('usethis')`, `r BiocStyle::CRANpkg('remotes')`, and `r BiocStyle::CRANpkg('rcmdcheck')` customized to use [Bioconductor's docker containers](https://www.bioconductor.org/help/docker/) and `r BiocStyle::Biocpkg('BiocCheck')`.
 * Code coverage assessment is possible thanks to [codecov](https://codecov.io/gh) and `r BiocStyle::CRANpkg('covr')`.
